syntax = "proto3";

package account;

option go_package = "account/pb";

service AccountService {
    rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
}

message GetAccountRequest {
    int64 account_id = 1;
}

message GetAccountResponse {
    int64 id = 1;
    string name = 2;
    bool is_active = 3;
    bool is_exists = 4;
}


// protoc -I=proto --go_out=pb --go_opt=paths=source_relative --go-grpc_out=pb --go-grpc_opt=paths=source_relative account.proto